src/routes/about/About.module.css
.about {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  align-items: center;
  height: 100vh;
  padding: 2rem;
  padding-top: 0;
  position: relative;
}

.title {
  font-size: 2rem;
  color: var(--font-color);
  margin: 2rem;
  text-align: left;
  align-self: flex-start;
}

.pictures {
  display: flex;
  justify-content: center;
  align-items: center;
  width: 100%;
}

.description1 {
  font-size: 1rem;
  color: var(--font-color);
  text-align: left;
  align-self: flex-start;
  width: 60%;
  margin-left: 2rem;
  margin-bottom: 0;
  margin-top: -7rem;
}
.description2{
  font-size: 1rem;
  color: var(--font-color);
  text-align: right;
  align-self: flex-start;
  width: 60%;
  margin-left: 10rem;
  margin-top: -6rem;
}

.description3{
  font-size: 1rem;
  color: var(--font-color);
  text-align: left;
  align-self: flex-start;
  width: 60%;
  margin-left: 2rem;
  margin-bottom: 0;
  margin-top: -7rem;
}

/* Media query for smaller screens */
@media (max-width: 950px) {
  .pictures {
    flex-direction: column;
    align-items: center;
  }
  .description1 {
    width: 80%;
    margin-left: 0;
    font-size: 0.9rem;
    margin-bottom: 0;
    margin-top: 5rem;
  }
  .description2 {
    width: 80%;
    font-size: 0.9rem;
    margin-left: 8rem;
    margin-top: 3rem;
    padding-right:1rem;
  }
  .description3{
    width: 80%;
    margin-left: 0;
    font-size: 0.9rem;
    margin-bottom: 1rem;
    margin-top: 2rem;
  }
}

@media (max-width: 480px) {
  .title {
    font-size: 2rem; /* Reduce title size on small screens */
  }

  .pictures {
    gap: 0.5rem; /* Less space between images */
    margin-top: 2rem;
  }
  .description1 {
    width: 80%;
    margin-left: 0;
    margin-top: 0;
    font-size: 0.7rem;
    margin-bottom: 0;
    margin-top: 5rem;
  }
  .description2 {
    width: 80%;
    margin-left: 0;
    font-size: 0.7rem;
    margin-left: 5rem;
    margin-top: 2rem;
  }
  .description3{
    width: 80%;
    margin-left: 0;
    font-size: 0.7rem;
    margin-bottom: 0;
    margin-top: 2rem;
  }
}

